# bgl_minimal_example

./: .gitignore  CMakeLists.txt  README.md
data/: halton_2d_withedges.graphml
src/: example.cpp
